# torchic

./: .gitignore  Cargo.toml  PROJECT_OVERVIEW.md  README.md  epoch_times.txt  loss.txt  stats.json
Todo plans/: buffer-allocator-free-pool-cap.md  metadata-arena.md  sum_backward_gpu_broadcast.md
examples/: mnist.rs
scripts/: buffer_allocation_graph.py
shader_templates/: binary_elementwise_operations.ron  matmul.wgsl  unary_operations.ron
src/: _main.rs  autograd.rs  buffer_alloc.rs  compute_operation.rs  kernel_registry.rs  lib.rs  main.rs  metadata_arena.rs  nn.rs  ops.rs  runtime.rs  tensor.rs
src/shader_templates/: add_e_c.wgsl  matmul.wgsl  normal.wgsl  outer.wgsl  reduce.wgsl  scalar_ewize.wgsl  sum.wgsl  transpose.wgsl  unop_ewize.wgsl
src/shader_templates/binop_ewize/: binop_ewize.wgsl
src/tensor/: binary_operators.rs  matrix_multiplication.rs  mod.rs  unary_operators.rs
