[package]
name = "torchic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = "1.22.0"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.27"
pollster = "0.4.0"
rand = "0.9.0"
ron = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
wgpu = "24.0.3"
